welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:3: error: illegal start of simple expression
}
^